[package]
name = "pki-playground"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
const-oid = { version = "0.9.5", features = ["db"] }
der = "0.7.8"
digest = "0.10.7"
ed25519-dalek = { version = "2.0.0", features = ["pem", "rand_core", "std", "zeroize"] }
flagset = "0.4.4"
hex = "0.4.3"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
p384 = "0.13.0"
pkcs8 = { version = "0.10.2", features = ["pem"] }
rand = "0.8.5"
rsa = { version = "0.9.3", features = ["sha2"] }
sha1 = "0.10.6"
sha2 = { version = "0.10.8", features = ["oid"] }
signature = "2.1.0"
spki = "0.7.2"
x509-cert = "0.2.4"
zeroize = "1.6.0"
