[package]
name = "pki-playground"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { version = "1.2.3" }
clap = { version = "4.6.1", features = ["derive"] }
const-oid = { version = "0.9.6", features = ["db"] }
der = { version = "0.7.9", features = ["std"] }
digest = "0.10.7"
ed25519-dalek = { version = "2.2.0", features = ["pem", "rand_core", "std", "zeroize"] }
flagset = "0.4.7"
hex = "0.4.3"
ipnet = "2.12.0"
knus = "3.4.0"
miette = { version = "7.6.0", features = ["fancy"] }
p384 = "0.13.1"
pem-rfc7468 = "0.7"
pkcs8 = { version = "0.10.2", features = ["pem"] }
rand = "0.8.6"
rsa = { version = "0.9.10", features = ["sha2"] }
sha1 = "0.10.6"
sha2 = { version = "0.10.9", features = ["oid"] }
sha3 = { version = "0.12.0", features = ["std", "oid"] }
signature = "2.2.0"
spki = "0.7.3"
x509-cert = "0.2.5"
zeroize = "1.9.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
